- When `scrolling.bar = True` was set in versions before v1.5.0, this now
  correctly gets migrated to `always` instead of `when-searching`.
- Completion highlighting now works again on Qt 5.11.3 and 5.12.1.
- The outdated header `X-Do-Not-Track` is no longer sent.
- A javascript error on page load when using Qt 5.12 was fixed.
- `window.print()` works with Qt 5.12 now.

v1.5.2
------

Changed
~~~~~~~

- The `content.cookies.accept` setting is now set to `all` instead of
  `no-3rdparty` by default, as `no-3rdparty` breaks various pages such as
  GMail.

v1.5.1
------

Fixed
~~~~~

- Flickering when opening/closing tabs (as soon as more than 10 are open) on
  some pages.
- PDF.js is now bundled again with the macOS/Windows release.
- PDF.js is now searched in the correct path (if not installed system-wide)
  instead of hardcoding `~/.local/share/qutebrowser`.
- Improved logging for PDF.js resources which fail to load.
- Crash when closing a tab after doing a search.
- Tabs appearing when hidden after e.g. closing tabs.

v1.5.0
------

Added
~~~~~

- Rewritten PDF.js support:
  * PDF.js support and the `content.pdfjs` setting are now also available with
    QtWebEngine.
  * Opening a PDF file now doesn't start a second request anymore.
  * Opening PDFs on https:// sites now works properly.
  * New `--pdfjs` flag for `prompt-open-download`, so PDFs can be opened in
    PDF.js with `<Ctrl-P>` in the download prompt.
- New settings:
  * `content.mouse_lock` to handle HTML5 pointer locking.
  * `completion.web_history.exclude` which hides a list of URL patterns from
    the completion.
  * `qt.process_model` which can be used to change Chromium's process model.
  * `qt.low_end_device_mode` which turns on Chromium's low-end device mode.
    This mode uses less RAM, but the expense of performance.
  * `content.webrtc_ip_handling_policy`, which allows more
    fine-grained/restrictive control about which IPs are exposed via WebRTC.